# c2rust

./: Cargo.toml  rust-toolchain.toml
analysis/runtime/: Cargo.toml
analysis/runtime/src/: handlers.rs  mir_loc.rs
analysis/runtime/src/runtime/: backend.rs  global_runtime.rs  scoped_runtime.rs
c2rust/: Cargo.toml
c2rust-analyze/: Cargo.toml  build.rs  rename_nll_facts.py
c2rust-analyze/src/: util.rs
c2rust-analyze/src/borrowck/: mod.rs  type_check.rs
c2rust-analyze/src/dataflow/: type_check.rs
c2rust-analyze/src/pointee_type/: mod.rs  type_check.rs
c2rust-ast-builder/: Cargo.toml
c2rust-ast-builder/src/: builder.rs
c2rust-ast-exporter/: Cargo.toml  build.rs  config.toml
c2rust-ast-exporter/src/: lib.rs
c2rust-ast-printer/: Cargo.toml
c2rust-ast-printer/src/: pprust.rs
c2rust-ast-printer/src/pprust/: tests.rs
c2rust-bitfields-test/: Cargo.toml
c2rust-bitfields-test/src/: tests.rs
c2rust-build-paths/src/: lib.rs
c2rust-macros/: Cargo.toml
c2rust-refactor/: Cargo.toml  README.md
c2rust-refactor/src/: illtyped.rs  lib.rs  print_spans.rs  resolve.rs  scripting.rs  span_fix.rs  type_map.rs
c2rust-transpile/: Cargo.toml
c2rust-transpile/src/: diagnostics.rs  lib.rs  renamer.rs
c2rust-transpile/src/build_files/: mod.rs
c2rust-transpile/src/c_ast/: mod.rs
c2rust-transpile/src/cfg/: inc_cleanup.rs  mod.rs  relooper.rs  structures.rs
c2rust-transpile/src/rust_ast/: comment_store.rs  mod.rs  set_span.rs  traverse.rs
c2rust-transpile/src/translator/: assembly.rs  atomics.rs  builtins.rs  main_function.rs  mod.rs  named_references.rs  operators.rs  simd.rs  structs.rs
c2rust/src/: main.rs
docker/: Dockerfile  README.md  docker_exec.sh  docker_run.sh
dynamic_instrumentation/: Cargo.toml
pdg/: Cargo.toml
scripts/: build_translator.py  cborpp.py  common.py  convert_build_commands.py  csmith.py  docker_build.sh  integration_test_translator.py  link_manual.py  package.py  pdg.sh  pdg_setup.sh  print_clang_ast.py  provision.sh  provision_arch.sh  provision_cmake.sh  provision_deb.sh  provision_dnf.sh  provision_mac.sh  provision_rust.sh  provision_yum.sh  query_toml.py  rust_file.py  test_examples.py  test_rust_refactor.py  test_translator.py
scripts/cc-wrappers/: cc  common.py  ld
