[package]
name = "c2rust-analyze"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "C2Rust analysis implementation for lifting unsafe Rust to safe Rust"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
polonius-engine = "0.13.0"
rustc-hash = "2.1.0"
bitflags = "2.7.0"
c2rust-pdg = { path = "../pdg" }
bincode = "1.3"
serde = "1.0"
assert_matches = "1.5.0"
indexmap = "2.7.0"
env_logger = "0.11.6"
log = "0.4.22"
backtrace = "0.3.71"
itertools = "0.14"
libc = "0.2.169"
clap = { version = "4.5.26", features = ["derive"] }
fs-err = "3.0.0"
anyhow = "1.0.95"
toml_edit = "0.22.22"
sha2 = "0.10.8"

[build-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.19.0" }
print_bytes = "2.0"

[dev-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.19.0" }
clap = { version = "4.5.26", features = ["derive"] }
shlex = "1.3.0"

[package.metadata.rust-analyzer]
rustc_private = true
