[package]
name = "c2rust-bitfields-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "C-compatible struct bitfield implementation used in the C2Rust project (tests)"

homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2rust-bitfields = { version = "0.19.0", path = "../c2rust-bitfields", features = [
    "no_std",
] }
c2rust-bitfields-derive = { version = "0.19.0", path = "../c2rust-bitfields-derive" }
libc = "0.2"
