[package]
name = "c2rust-refactor"
version = "0.19.0"
authors = [
  "The C2Rust Project Developers <c2rust@immunant.com>",
  "Stuart Pernsteiner <spernsteiner@galois.com>",
]
license = "BSD-3-Clause"
homepage = "https://c2rust.com/"
repository = "https://github.com/immunant/c2rust"
description = "C2Rust refactoring tool implementation"
edition = "2021"

[dependencies]
diff = "0.1"
json = "0.12"
libc = "0.2"
regex = "1.11"
ena = "0.14"
c2rust-ast-builder = { version = "0.19.0", path = "../c2rust-ast-builder" }
c2rust-ast-printer = { version = "0.19.0", path = "../c2rust-ast-printer" }
indexmap = { version = "2.7.0", features = ["serde"] }
cargo = "0.85"
clap = { version = "4.5.26" }
c2rust-analysis-rt = { path = "../analysis/runtime", version = "0.19.0" }
env_logger = "0.11"
log = "0.4"
rlua = "0.20"
slotmap = { version = "1.0", features = ["unstable"] }
derive_more = "1"
c2rust-macros = { version = "0.19.0", path = "../c2rust-macros" }
flame = { version = "0.2.2", optional = true }
flamer = { version = "0.5", optional = true }
failure = "0.1"
bincode = "1.0.1"
petgraph = "0.7"

[dev-dependencies]
z3 = "0.12.1"
quickcheck = "1.0.3"
rand = "0.8"

[lib]
name = "c2rust_refactor"
path = "src/lib.rs"

[features]
default = []
profile = ["flame", "flamer"]
