[package]
name = "c2rust-pdg"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Pointer Derivation Graph used for dynamic analysis by C2Rust"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bincode = "1.3"
c2rust-analysis-rt = { path = "../analysis/runtime", version = "0.19.0" }
indexed_vec = "1.2"
indexmap = "2.7"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
color-eyre = "0.6.3"
fs-err = "3"
itertools = "0.14"
linked_hash_set = "0.1"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.19.0" }

[dev-dependencies]
insta = "1.42"

[package.metadata.rust-analyzer]
rustc_private = true
